# updrive

./: .env  main.py  pyproject.toml  requirements.txt  updrive.db
app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  storage.py  utils.py
app/routers/: __init__.py  auth.py  files.py  register.py  root.py
webdrive/: __init__.py  config.py  main.py  router.py
webdrive/static/: app.js  style.css
webdrive/templates/: base.html  drive.html  login.html  register.html
